--- a/Steam_Reviews_Sarcasm_Detection_Project.ipynb
+++ b/Steam_Reviews_Sarcasm_Detection_Project.ipynb
@@ -11,6 +11,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Steam Reviews Sarcasm Detection"
+      ],
+      "metadata": {
+        "id": "gzAY-XVRdt-6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Imports"
+      ],
+      "metadata": {
+        "id": "odS5CCNKdpjA"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
@@ -1968,7 +1986,7 @@
       "gpuType": "T4",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6UxS8B+lGupko/f2DzoGa",
+      "authorship_tag": "ABX9TyO3QM2ssVw0QxuBAWB7lO+R",
       "include_colab_link": true
     },
     "kernelspec": {
