--- a/Steam_Reviews_Sarcasm_Detection_Project.ipynb
+++ b/Steam_Reviews_Sarcasm_Detection_Project.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "S4tJehqk4Gnv"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -500,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -547,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -656,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "M8F4uTe6YYCU"
       },
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -715,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "6TOGSa7_MfNj"
       },
@@ -727,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -759,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -785,7 +785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "1NP28oZFFc3S"
       },
@@ -798,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1275,7 +1275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "HV0b11qjqCvZ"
       },
@@ -1312,7 +1312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "vnrI2mlSpEPY"
       },
@@ -4231,16 +4231,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# *** MORE METRICS ***"
-      ],
-      "metadata": {
-        "id": "-nCZMtvn8NGU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Fine Tuning"
+        "# Fine Tuning"
       ],
       "metadata": {
         "id": "1FQrwy1U0xfj"
@@ -7784,7 +7775,7 @@
         },
         "outputId": "408dcefc-5865-4a61-e7a6-b9f0cddd405b"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7871,7 +7862,7 @@
       "metadata": {
         "id": "KHo1RQDLbBNR"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7904,7 +7895,7 @@
       "metadata": {
         "id": "XybV7ydmbCHe"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7920,7 +7911,7 @@
         "id": "m-mtv_dObKGp",
         "outputId": "eda43d4d-8e6d-4d08-ff7f-44e44414b6c5"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7968,7 +7959,7 @@
         "id": "eZLIAJXEbHTJ",
         "outputId": "fde0e6ea-40b2-4405-a2f3-dab86eba7902"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8050,7 +8041,7 @@
         "id": "ZvMY8-tRdqda",
         "outputId": "574e1546-543b-46af-f98d-a4f55f1a4a9d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8138,7 +8129,7 @@
       "gpuType": "T4",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqJiR6s6lWtEnWtbJj6Lon",
+      "authorship_tag": "ABX9TyMv0IxQsMcPTwj1NPSpzNE6",
       "include_colab_link": true
     },
     "kernelspec": {
